--- a/src/app/pages/welcome-page/welcome-page.component.html
+++ b/src/app/pages/welcome-page/welcome-page.component.html
@@ -9,15 +9,21 @@
 
         <div style="width: 100%; padding: 10px; display: flex; align-items: center; justify-content: center; flex-direction: column;">
             <h2 style="font-weight: 500; font-size: 1.2rem;">Kunal Suddhalkar</h2>
-            <h4 style="font-weight: 500; font-size: 1.1rem;">Full-stack web developer</h4>
+            <h4 style="font-weight: 500; font-size: 1.1rem;">Senior Graphic Designer | Visual Design | Logo Designer | Advertising and Marketing
+</h4>
             <p style="margin-top: 5px;">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem aliquid facilis dignissimos provident
-                necessitatibus reprehenderit soluta dicta nulla libero qui, quidem itaque ex voluptatum at cupiditate
-                sequi quam dolor officia!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime recusandae iure voluptates obcaecati,
-                assumenda commodi officiis consequuntur laborum minima velit accusantium, molestiae eligendi provident,
-                suscipit aperiam aspernatur perspiciatis aliquam harum.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, distinctio eligendi. Nemo, adipisci earum ipsam et cum voluptatem autem, repellendus quae maiores hic nihil quas. Maxime iste exercitationem obcaecati quasi.
+                Design for me is not a career choice but a way to express myself! Design in every aspect inspires me, more so graphic design!
+
+I have been designing a wide range of graphic design collaterals for the last 5 years, that helps brand communicate to their target audiences. I try to bring the right balance of design and communication whether it is an eBook, White Paper, Sales Deck, Advertising Campaigns, Social Media Posts, Website banners, or even Infographics. 
+
+I have been privileged to work with some great brands as a freelancer in my initial years and then as a senior graphic designer for some of the best forward-thinking organizations. 
+
+Currently, I am the Senior Graphic Designer at TRUGlobal Software, where I design all marketing and communication collaterals and advertising campaigns.
+
+I have done my BFA to hone my design foundations and have experience with graphic tools like Illustrator, Photoshop, Premier Pro, After Effects, Corel Draw, etc. to deliver high-quality designs that will help businesses engage and grow their target market.
+
+You can view my portfolio at Behance 
+https://www.behance.net/suddhalkarkunal
             </p>
         </div>
         <div class="connect">
