--- a/src/app/pages/welcome-page/welcome-page.component.html
+++ b/src/app/pages/welcome-page/welcome-page.component.html
@@ -31,7 +31,7 @@ https://www.behance.net/suddhalkarkunal
                 <i class="fa-brands fa-square-github"></i>
                 <h3 class="con-github">Connect On Github</h3>
             </div>
-            <div class="linkedin">
+                <div class="linkedin" (click)="openLink('https://www.linkedin.com/in/suddhalkarkunal/')">
                 <i class="fa-brands fa-linkedin"></i>
                 <h3 class="con-linkedin">Connect On linkedIn</h3>
             </div>
