--- a/src/app/pages/welcome-page/welcome-page.component.html
+++ b/src/app/pages/welcome-page/welcome-page.component.html
@@ -44,7 +44,7 @@ https://www.behance.net/suddhalkarkunal
     <h3 style="font-weight: 500; font-size: 1.2rem;">Our Services</h3>
 </div>
 
-<div class="first">
+<!-- <div class="first">
     <div class="one">
         <!-- <i class="fa-brands fa-windows"></i> -->
         <!-- <i class="fab fa-windows"></i> -->
@@ -85,7 +85,50 @@ https://www.behance.net/suddhalkarkunal
         <p>Deployment</p>
     </div>
 </div>
+ -->
 
+<div class="first"> 
+    <div class="one">
+        <i class="fa-solid fa-palette"></i> <!-- Choose an appropriate icon -->
+        <h3>Skills for Senior Graphic Designer at TRUGLOBAL</h3>
+        <p>Landing Pages</p>
+        <p>Email Newsletter Design</p>
+        <p>Marketing</p>
+        <p>Sales Presentations</p>
+        <p>Social Media</p>
+        <p>Branding & Identity</p>
+        <p>Creative Briefs</p>
+        <p>Adobe Creative Cloud</p>
+        <p>Concept Generation</p>
+        <p>Social Media Marketing</p>
+        <p>Marketing Materials</p>
+        <p>Web Development</p>
+        <p>Video Production</p>
+    </div>
+
+    <div class="two">
+        <i class="fa-solid fa-lightbulb"></i> <!-- Another appropriate icon -->
+        <h3>Additional Information</h3>
+        <p>Discover jobs, people, learning content and conversations about these skills</p>
+        <p>Learn more about these skills</p>
+    </div>
+
+    <div class="one">
+        <i class="fa-solid fa-pen"></i> <!-- Graphic design related icon -->
+        <h3>Design Journey</h3>
+        <p>Design for me is not a career choice but a way to express myself! I have been designing a wide range of graphic design collaterals for the last 5 years, helping brands communicate with their target audiences.</p>
+        <p>I try to bring the right balance of design and communication through various formats, including eBooks, White Papers, Sales Decks, Social Media Posts, Website banners, and Infographics.</p>
+        <p>Currently, I am the Senior Graphic Designer at TRUGlobal Software, where I design marketing and communication collaterals and advertising campaigns.</p>
+    </div>
+
+    <div class="two">
+        <i class="fa-solid fa-graduation-cap"></i> <!-- Icon for education -->
+        <h3>Experience & Education</h3>
+        <p>Bachelor of Fine Arts (BFA)</p>
+        <p>5+ years of experience in graphic design</p>
+        <p>Tools: Illustrator, Photoshop, Premier Pro, After Effects, Corel Draw</p>
+    </div>
+</div>
 
 
 
